Upgrade internal libslack to 0.7.3

--- a/libslack/libslack.pod
+++ b/libslack/libslack.pod
@@ -1,5 +1,5 @@
 #
-# libslack - http://libslack.org/
+# libslack - https://libslack.org
 #
 # Copyright (C) 1999-2002, 2004, 2010, 2020-2023 raf <raf@raf.org>
 #
@@ -16,7 +16,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, see <https://www.gnu.org/licenses/>.
 #
-# 20230313 raf <raf@raf.org>
+# 20230330 raf <raf@raf.org>
+#
 
 =head1 NAME
 
@@ -175,7 +176,7 @@ possible to let the end user specify which locking strategy to use. It
 supports mutual exclusion locks, readers/writer locks and no locking. There
 are also debug versions that print messages to standard output to help
 clients locate deadlocks. See
-C<http://raf.org/papers/mt-disciplined.html>.
+C<https://raf.org/papers/mt-disciplined.html>.
 
 =item Coprocesses and Pseudo Terminals
 
@@ -313,8 +314,8 @@ that really needs to be in the manpages, don't hesitate to let me know.
 
 =head1 SEE ALSO
 
-C<http://libslack.org/>,
-C<http://raf.org/papers/mt-disciplined.html>,
+C<https://libslack.org>,
+C<https://raf.org/papers/mt-disciplined.html>,
 I<libslack-config(1)>,
 I<agent(3)>,
 I<coproc(3)>,
@@ -341,6 +342,6 @@ I<vsscanf(3)>
 
 =head1 AUTHOR
 
-20230313 raf <raf@raf.org>
+20230330 raf <raf@raf.org>
 
 =cut
